--- a/sass/lightbox.sass
+++ b/sass/lightbox.sass
@@ -200,6 +200,7 @@
 				top: 50%
 				transform: translate(-50%, -50%)
 		
+
 	&.uberbox-description-mini
 		.uberbox-item-object
 			bottom: 50px
@@ -522,3 +523,25 @@
 		transform: translate(-50%, -50%)
 .uberbox-bandcamp-content iframe
 	max-width: 700px
+.uberbox-ajax-content
+		&.uberbox-center-vertical
+			position: absolute
+			left: 0
+			right: 0
+			top: 50%
+			transform: translate(0, -50%)
+		&.uberbox-scroll
+			position: fixed
+			overflow: scroll
+			top: 0
+.uberbox-ajax-content.uberbox-scroll
+	bottom: 20px
+	left: 40px
+	right: 40px
+	top: 45px
+.uberbox-horizontal.uberbox-has-carousel .uberbox-ajax-content.uberbox-scroll
+	bottom: 130px
+.uberbox-vertical.uberbox-has-carousel .uberbox-ajax-content.uberbox-scroll
+	right: 180px
+	
+
