Returned files deleted by accident, added unknown content type

--- a/sass/lightbox.sass
+++ b/sass/lightbox.sass
@@ -545,3 +545,10 @@
 	right: 180px
 	
 
+.uberbox-unknown-content
+	position: absolute
+	left: 0
+	top: 0
+	bottom: 0
+	right: 0
+	background: url(../img/no-photo.png) center center no-repeat
