--- a/sass/toolbar.sass
+++ b/sass/toolbar.sass
@@ -17,7 +17,7 @@
 	text-transform: none
 	&.uberbox-visible
 		opacity: 1
-	a[data-action], button[data-action]
+	*[data-action]
 		position: relative
 		float: right
 		font-size: 15px
@@ -36,7 +36,7 @@
 		cursor: pointer
 		text-transform: none
 		outline: none
-		&:disabled
+		&.uberbox-disabled
 			display: none
 		&:active
 			box-shadow: none
@@ -81,7 +81,7 @@
 			margin-right: 0.75em
 		&:hover
 			background: #eee
-.uberbox-toolbar button[data-action=share] 
+.uberbox-toolbar *[data-action=share] 
 	.uberbox-share-menu
 		display: none
 		opacity: 0
