--- a/templates/toolbar.html
+++ b/templates/toolbar.html
@@ -1,14 +1,14 @@
 <div class="uberbox-lightbox-actions">
-	<button data-action="close"><i class="uberbox-icon-close"></i></button>
+	<a href="#" data-action="close"><i class="uberbox-icon-close"></i></a>
 	<% if (Uberbox.Utils.supportsFullScreen()) { %>
-		<button data-action="fullscreen">
+		<a href="#" data-action="fullscreen">
 			<i class="uberbox-icon-fullscreen"></i>
 			<span class="uberbox-tooltip"><%= obj.model.get('fullscreen_tooltip' )%></span>
-		</button>
-		<button data-action="exit-fullscreen" disabled="disabled">
+		</a>
+		<a href="#" data-action="exit-fullscreen" class="uberbox-disabled" >
 			<i class="uberbox-icon-exit-fullscreen"></i>
 			<span class="uberbox-tooltip"><%= obj.model.get('exit_fullscreen_tooltip' )%></span>
-		</button>
+		</a>
 	<% } %>
 	<% if (obj.model.get('download_url')) { %>
 		<a data-action="download" href="<%= obj.model.get('download_url') %>" target="_blank">
@@ -17,7 +17,7 @@
 		</a>
 	<% } %>
 	<% if (services = obj.model.get('share')) { %>
-		<button href="#" data-action="share">
+		<div href="#" data-action="share">
 			<i class="uberbox-icon-share"></i>
 			<span class="uberbox-tooltip"><%= obj.model.get('share_tooltip') %></span>
 			<div class="uberbox-share-menu">
@@ -36,6 +36,6 @@
 					</a>
 				<% } %>
 			</div>
-		</button>
+		</div>
 	<% } %>
 </div>
